--- a/sytles/style.css
+++ b/sytles/style.css
@@ -302,3 +302,12 @@ footer a{
     background-color: #e5e7eb;
     border-color: #ccc;
 }
+
+.card button {
+    padding: 8px;
+    border-radius: 20px;
+    border: none;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
